--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <body>
   
   <div class="output">
-
+    <ul>
+      <!-- <li>
+        <p>Name:  - Role:  - img: </p>
+      </li> -->
+    </ul>
   </div>
 
   <script src="JS/script.js"></script>
