--- a/index.html
+++ b/index.html
@@ -8,19 +8,32 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="CSS/style.css">
   <title>Document</title>
 </head>
 <body>
 
-  <img src="" alt="">
   
-  <div class="output">
-    <ul>
-      <!-- <li>
-        <p>Name:  - Role:  - img: </p>
-      </li> -->
-    </ul>
+  <div class="my-container">
+    <h2>OUR TEAM</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint porro pariatur quasi suscipit sapiente, officia voluptatem. Id officiis laudantium accusamus.</p>
+  </div>
+  <div class="container">
+    <div class="row row-cols-3 output">
+      <!-- <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body text-center ">
+            <h3>nome</h3>
+            <p>role</p>
+          </div>
+        </div>
+      </div> -->
+    </div>
   </div>
 
   <script src="JS/script.js"></script>
